--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+ See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#.prettierrc
+#.eslintrc.json
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
+.idea
+.env
 # testing
 /coverage
 
